--- a/MyData/Templates/users/login.html
+++ b/MyData/Templates/users/login.html
@@ -16,6 +16,6 @@
     <input type="text" placeholder="Username" name="username">
     <input type="password" placeholder="password" name="password">
 
-    <button class="btn btn prymary" type="submit"></button>
+    <button class="btn btn prymary" type="submit">Ingresar</button>
 </form>
 {% endblock %}
