--- a/MyData/Templates/block.html
+++ b/MyData/Templates/block.html
@@ -7,15 +7,17 @@
 
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" crossorigin="anonymous" />
+    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" crossorigin="anonymous" /> -->
     <link rel="stylesheet" href="{% static 'css/main.css' %}" />
 
 </head>
 <body>
 
+    <div class="flex-container" style="padding-block: 10px;">
+        {% include "home.html" %}
+    </div>
 
-
-    <div class="container mt-5">
+    <div class="flex-container" style="flex-direction: row;">
         {% block container %}
         {% endblock%}
     </div>
