Detalles y retoques de la segunda versión para muestra

--- a/MyData/Templates/users/login.html
+++ b/MyData/Templates/users/login.html
@@ -12,10 +12,9 @@
 
 <form method="POST" action="{% url 'login_view' %}">
     {% csrf_token %}
-
-    <input type="text" placeholder="Username" name="username">
-    <input type="password" placeholder="password" name="password">
-
-    <button class="btn btn prymary" type="submit">Ingresar</button>
+    <div class="input-group mb-3"><input type="text" placeholder="Username" name="username" style="width: 100%;"></div>
+    <div class="input-group mb-3"><input type="password" placeholder="password" name="password" style="width: 100%;"></div>
+    <button class="btn btn-primary btn-lg" type="submit" style="width: 100%;">Ingresar</button>
 </form>
+
 {% endblock %}
