--- a/MyData/Templates/users/home.html
+++ b/MyData/Templates/users/home.html
@@ -5,21 +5,26 @@
     {% block head_content %}{% endblock %}
 
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+    
+
+    <!-- <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" crossorigin="anonymous" />
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" /> -->
 
 </head>
-<body class="h-100">
+<body class="container-fluid align-items-center">
 
-    <div class="container h-100" style="position: relative;">
-        <div class="row h-100 justify-content-center align-items-center">
+    <div class="container-fluid align-items-center">
+        <div class="row justify-content-center align-items-center">
             <div class="col-sm-12 col-md-5 col-lg-5 pt-2 pl-5 pr-5 pb-5" id="auth-container">
 
-                <img src="{% static 'img/logo.png' %}" class="img-fluid rounded mx-auto d-block pb-4" style="max-width: 60%;">
+                <img src="{% static 'img/logo.png' %}" class="img-fluid rounded mx-auto d-block pb-4" style="max-width: 40%;">
 
-                {% block container %}{% endblock%}
-
+                <div class="container-md" class="border-color:black;">
+                    {% block container %}{% endblock%}
+                </div>
             </div>
         </div>
     </div>
