--- a/MyData/Templates/users/singup.html
+++ b/MyData/Templates/users/singup.html
@@ -1,4 +1,4 @@
-{% extends "block.html" %}
+{% extends "users/home.html" %}
 
 {% block head_content %}
 <title>CoronaData SingUp</title>
@@ -16,26 +16,26 @@
     
     {% csrf_token %}
 
-    <div class="form-group">
-        <input type="text" placeholder="Username" required="true" name="username">
+    <div class="input-group mb-3">
+        <input type="text" placeholder="Username" required="true" name="username" style="width: 100%;">
     </div>
-    <div class="form-group">
-        <input type="password" placeholder="Password" required="true" name="passwd">
+    <div class="input-group mb-3">
+        <input type="password" placeholder="Password" required="true" name="passwd" style="width: 100%;">
     </div>
-    <div class="form-group">
-        <input type="password" placeholder="Confirm Password" required="true" name="paswd_conf">
+    <div class="input-group mb-3">
+        <input type="password" placeholder="Confirm Password" required="true" name="paswd_conf" style="width: 100%;">
     </div>
-    <div class="form-group">
-        <input type="text" placeholder="First name" required="true" name="first_name">
+    <div class="input-group mb-3">
+        <input type="text" placeholder="First name" required="true" name="first_name" style="width: 100%;">
     </div>
-    <div class="form-group">
-        <input type="text" placeholder="Last name" required="true" name="last_name">
+    <div class="input-group mb-3">
+        <input type="text" placeholder="Last name" required="true" name="last_name" style="width: 100%;">
     </div>
-    <div class="form-group">
-        <input type="email" placeholder="Email address" required="true" name="email">
+    <div class="input-group mb-3">
+        <input type="email" placeholder="Email address" required="true" name="email" style="width: 100%;">
     </div>
 
-    <button class="btn btn prymary" type="submit">Crea tu usuario!!</button>
+    <button class="btn btn-primary btn-lg" type="submit" style="width: 100%;">Crea tu usuario!!</button>
 </form>
 
 {% endblock %}
